# auto-video-generation-fold6

./: .backup_path  .config_backup_path  .dockerignore  .env.development  .env.example  .env.example.new  .env.production  .env.template  .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ADVANCED_VIDEO_PROCESSING.md  CI_CD_OPTIMIZATION_SUMMARY.md  CI_TEST.md  CLAUDE.md  CODEQL_CONFLICT_FIX.md  CODEQL_FIX.md  DEEPSEEK_GUIDE.md  DEPLOYMENT_READINESS_REPORT.md  DEVELOPMENT.md  FLAKE8_FIXES_SUMMARY.md  FORMATTING_CONSISTENCY_FIX.md  FRONTEND_DEPENDENCY_FIX.md  FRONTEND_ESLINT_FIX.md  FRONTEND_INTEGRATION.md  GITHUB_ACTIONS_COMPREHENSIVE_FIX.md  GITHUB_ACTIONS_FIXES.md  GITHUB_ACTIONS_V4_FIXES.md  IMPLEMENTATION_GUIDE.md  KEY_MANAGEMENT.md  MVP_GAP_ANALYSIS.md  MYPY_IMPROVEMENTS.md  Makefile  NODEJS_CACHE_FIX.md  OPTIMIZATION_SYSTEMS.md  PROJECT_STATUS_REPORT.md  PYTHON_DEPENDENCIES_FIX.md  README.md  README_FINAL.md  (+70 more)
auto_generate_video_fold6/: .env.development  .env.example  .env.production.ready  .env.testing  .eslintrc.js  .gitignore  .gitmessage  .lighthouserc.json  .pre-commit-config.yaml  .prettierrc  CLAUDE.md  LICENSE  Makefile  PERFORMANCE_OPTIMIZATION.md  README.md  REFACTORING_SUMMARY.md  SYSTEM_SUMMARY.md  TDD_REFACTOR_DOCKER_OPTIMIZATION_REPORT.md  TDD_SYSTEM_REFACTOR_REPORT.md  TODO.md  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  launch-commercial.sh  pyproject.toml  pytest.ini  quick_start.sh  requirements-e2e.txt  requirements-reporting.txt  run_e2e_test.py  test_docker_containerization.py  test_e2e_entrepreneur_workflow.py  test_e2e_simple.py  test_monitoring_logging_system.py  test_monitoring_performance_optimization.py  test_monitoring_performance_refactored.py  test_refactor_validation.py  todo.md
auto_generate_video_fold6/.github/: PULL_REQUEST_TEMPLATE.md  branch-protection.md
auto_generate_video_fold6/.github/workflows/: backend-quality.yml  branch-protection-check.yml  ci-cd-complete.yml  ci.yml  enterprise-ci.yml  quality-check.yml  security-scan.yml  security.yml  tdd-ci.yml
auto_generate_video_fold6/compliance/gdpr/: gdpr-compliance.py
auto_generate_video_fold6/config/: auth-config.json  auto_trends_config.json.backup.20250730_081417  base-config.json  config_manager.py  startup-config.json
auto_generate_video_fold6/database/: __init__.py  sync_manager.py
auto_generate_video_fold6/docker/: Dockerfile.e2e  docker-compose.ha.yml
auto_generate_video_fold6/docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  FINAL_SYSTEM_SUMMARY.md  M4_OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  QUICK_COMMERCIAL_DEPLOYMENT.md  TDD_CHECKLIST.md  TESTING_STRATEGY.md  TROUBLESHOOTING.md  UI_COMPONENTS_GUIDE.md
auto_generate_video_fold6/docs/ADR/: 002-fastapi-framework.md
auto_generate_video_fold6/docs/api/: openapi.yaml
auto_generate_video_fold6/examples/: ai_integration_demo.py
auto_generate_video_fold6/frontend/: Dockerfile.test  package-lock.json  package.json  playwright.config.js  svelte.config.js  tsconfig.json  vitest.config.js  vitest.config.ts
auto_generate_video_fold6/frontend/src/: app.html
auto_generate_video_fold6/k8s/: configmap.yaml
auto_generate_video_fold6/models/: __init__.py  auth_models.py  base.py  scheduler_models.py  storage_models.py  trend_models.py  video_models.py
auto_generate_video_fold6/monitoring/: analytics_dashboard.py  application_monitoring.py  budget_controller.py  cost_tracker.py  docker-compose.logging.yml  docker-performance-monitor.py  health_monitor.py  intelligent_cost_optimizer.py  report_generator.py
auto_generate_video_fold6/monitoring/alertmanager/: alertmanager.yml
auto_generate_video_fold6/monitoring/analytics/: log_analyzer.py
auto_generate_video_fold6/monitoring/backup/: backup_monitor.py
auto_generate_video_fold6/monitoring/business_metrics/: business_metrics_collector.py  metrics_collector.py
auto_generate_video_fold6/monitoring/health-check/: health_monitor.py  requirements.txt
auto_generate_video_fold6/monitoring/logging/: performance_logger.py  structured_logger.py
auto_generate_video_fold6/monitoring/metrics/: optimized_metrics_collector.py
auto_generate_video_fold6/monitoring/middleware/: correlation_middleware.py  health_check_middleware.py  performance_middleware.py  prometheus_middleware.py
auto_generate_video_fold6/monitoring/prometheus/: prometheus.yml
auto_generate_video_fold6/monitoring/tracing/: opentelemetry_middleware.py
auto_generate_video_fold6/performance/api/: response-optimization.py
auto_generate_video_fold6/performance/benchmarking/: performance-tests.py
auto_generate_video_fold6/performance/caching/: cache-strategies.py
auto_generate_video_fold6/performance/database/: postgres-optimization.sql
auto_generate_video_fold6/performance/load-balancing/: nginx-lb.conf
auto_generate_video_fold6/scripts/: Dockerfile.scheduler  auto_trends_video.py  backup_manager.py  config-validator.py  deploy_enterprise_system.py  dev-setup.sh  disaster_recovery.py  fix_flake8.py  generate-tdd-report.py  init-test-db.sql  integration_test.py  mock_services_e2e.py  performance_benchmark.py  remove_branch_protection.py  requirements.txt  run-all-tests.sh  run-tests.sh  run_e2e_test.py  run_tests.py  scheduler.py  security_scanner.py  service_manager.py  setup-database.sh  start_frontend.sh  switch_mode.sh  test-coverage-audit.py  test_backup_recovery.py  validate_backup_config.py
auto_generate_video_fold6/scripts/backup/: backup_system.py
auto_generate_video_fold6/security/: generate_security_report.py  security-scanner.py  zero-trust-security.py
auto_generate_video_fold6/services/ai-service/: Dockerfile  ai_orchestrator.py  gemini_client.py  mlops_pipeline.py  requirements-dev.txt  requirements.txt
auto_generate_video_fold6/services/api-gateway/: requirements-dev.txt  requirements.txt
auto_generate_video_fold6/test-results/: test-report.json
auto_generate_video_fold6/tests/: conftest.py  test_config_manager.py  test_cost_tracker.py
(+1534 files in other folders)
